<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quices"
        android:textSize="20dp"
        android:textColor="@color/indigo"
        android:layout_weight="1.8"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:inputType="number"
        android:layout_weight="1"
        android:id="@+id/equices"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exposiciones"
        android:textSize="20dp"
        android:textColor="@color/indigo"
        android:layout_weight="1.8"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:inputType="number"
        android:layout_weight="1"
        android:id="@+id/eexposiciones"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab"
        android:textSize="20dp"
        android:textColor="@color/indigo"
        android:layout_weight="1.8"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:inputType="number"
        android:layout_weight="1"
        android:id="@+id/elab"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/proyecto"
        android:textSize="20dp"
        android:textColor="@color/indigo"
        android:layout_weight="1.8"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:inputType="number"
        android:layout_weight="1"
        android:id="@+id/eproyecto"/>

    </LinearLayout>


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:id="@+id/boton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/definitiva"
        android:textSize="20dp"
        android:id="@+id/tDefinitiva"/>

</LinearLayout>